--- a/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
+++ b/tutorials/streamlit_notebooks/SPELL_CHECKER_EN.ipynb
@@ -60,14 +60,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c559351-59bb-4481-9bab-0fac02aba7f5"
+        "outputId": "b9d6a914-4ba1-449b-b04f-5a4cf8016e49"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/718.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m716.8/718.9 kB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.9/718.9 kB\u001b[0m \u001b[31m18.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.9/718.9 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -140,16 +140,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_DJnasw_YhUo",
-        "outputId": "05933539-c87c-4f6b-db55-55285b21a074"
+        "outputId": "a25430a2-169b-4725-cbb5-c0e46d61d488"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Warning::Spark Session already created, some configs may not take.\n",
-            "Spark NLP version: 6.0.4\n",
+            "Spark NLP version: 6.0.5\n",
             "check_spelling download started this may take some time.\n",
             "Approx size to download 884.9 KB\n",
             "[OK!]\n",
@@ -166,14 +166,14 @@
     {
       "cell_type": "code",
       "source": [
-        "! wget https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-5.1.3.jar -O spark-nlp-5.1.3.jar\n"
+        "! wget https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-6.0.5.jar -O spark-nlp-6.0.5.jar\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xPk_t4TfhCcs",
-        "outputId": "b5af3c17-bff8-4f60-b052-fdb263e0b74d"
+        "outputId": "f442cbea-5042-4cdf-e10a-b57ea348707e"
       },
       "execution_count": 2,
       "outputs": [
@@ -181,16 +181,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-10 13:26:35--  https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-5.1.3.jar\n",
-            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.199.8, 54.231.160.248, 54.231.236.224, ...\n",
-            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.199.8|:443... connected.\n",
+            "--2025-07-11 09:43:32--  https://s3.amazonaws.com/auxdata.johnsnowlabs.com/public/jars/spark-nlp-assembly-6.0.5.jar\n",
+            "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.217.195.80, 3.5.17.86, 54.231.195.48, ...\n",
+            "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.217.195.80|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 708534094 (676M) [application/java-archive]\n",
-            "Saving to: ‘spark-nlp-5.1.3.jar’\n",
+            "Length: 656279608 (626M) [application/java-archive]\n",
+            "Saving to: ‘spark-nlp-6.0.5.jar’\n",
             "\n",
-            "spark-nlp-5.1.3.jar 100%[===================>] 675.71M  54.6MB/s    in 13s     \n",
+            "spark-nlp-6.0.5.jar 100%[===================>] 625.88M  20.1MB/s    in 34s     \n",
             "\n",
-            "2025-07-10 13:26:48 (51.5 MB/s) - ‘spark-nlp-5.1.3.jar’ saved [708534094/708534094]\n",
+            "2025-07-11 09:44:06 (18.7 MB/s) - ‘spark-nlp-6.0.5.jar’ saved [656279608/656279608]\n",
             "\n"
           ]
         }
@@ -208,28 +208,49 @@
         "def initialize_spark_nlp():\n",
         "    spark = SparkSession.builder \\\n",
         "        .appName(\"check_spelling\") \\\n",
-        "        .config(\"spark.jars\", \"/content/spark-nlp-5.1.3.jar\") \\\n",
+        "        .config(\"spark.jars\", \"/content/spark-nlp-6.0.5.jar\") \\\n",
         "        .getOrCreate()\n",
         "    return spark\n",
         "\n",
+        "def load_pipeline(pipeline_name='check_spelling', lang='en'):\n",
+        "    try:\n",
+        "        return PretrainedPipeline(pipeline_name, lang=lang)\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error loading pipeline '{pipeline_name}':\", str(e))\n",
+        "        raise\n",
+        "\n",
+        "def get_corrected_text(annotations):\n",
+        "    try:\n",
+        "        corrected_tokens = [token.result for token in annotations['checked']]\n",
+        "        return \" \".join(corrected_tokens).replace(\" ,\", \",\").replace(\" .\", \".\")\n",
+        "    except KeyError:\n",
+        "        print(\"Error: 'checked' key not found in annotations.\")\n",
+        "        return \"\"\n",
+        "\n",
         "def main():\n",
-        "    spark = initialize_spark_nlp()\n",
-        "    print(\"Spark NLP version:\", sparknlp.version())\n",
-        "    print(\"*\" * 77)\n",
+        "    text = (\n",
+        "        \"Yesturday, I went to the libary to borow a book about anciant civilizations. \"\n",
+        "        \"The wether was pleasent, so I decidid to walk insted of taking the buss. On the way, \"\n",
+        "        \"I saw a restuarent that lookt intresting, and I plan to viset it soon.\"\n",
+        "    )\n",
         "\n",
-        "    data = spark.createDataFrame([[\"Yesturday, I went to the libary and saw elefants.\"]]).toDF(\"text\")\n",
+        "    try:\n",
+        "        # Initialize Spark NLP and load the pipeline\n",
+        "        spark = initialize_spark_nlp()\n",
+        "        pipeline = load_pipeline()\n",
         "\n",
-        "    document = DocumentAssembler().setInputCol(\"text\").setOutputCol(\"document\")\n",
-        "    tokenizer = Tokenizer().setInputCols([\"document\"]).setOutputCol(\"token\")\n",
-        "    spell = NorvigSweetingModel.pretrained() \\\n",
-        "        .setInputCols([\"token\"]) \\\n",
-        "        .setOutputCol(\"spell\")\n",
+        "        # Annotate text\n",
+        "        annotations = pipeline.fullAnnotate(text)[0]\n",
         "\n",
-        "    pipeline = Pipeline(stages=[document, tokenizer, spell])\n",
-        "    model = pipeline.fit(data)\n",
-        "    result = model.transform(data)\n",
+        "        # Get and print corrected text\n",
+        "        corrected_text = get_corrected_text(annotations)\n",
+        "        print(\"*\"*77)\n",
+        "        print(\"Original Text:\\n\", text)\n",
+        "        print(\"Corrected Text:\\n\", corrected_text)\n",
+        "        print(\"*\"*77)\n",
         "\n",
-        "    result.select(\"spell.result\").show(truncate=False)\n",
+        "    except Exception as e:\n",
+        "        print(\"An unexpected error occurred:\", str(e))\n",
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
@@ -239,25 +260,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_5r5-n3LgywO",
-        "outputId": "6335dc50-2551-450d-c551-f1cee28a758a"
+        "outputId": "49e955c1-3850-481d-e466-5054f4488a63"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Spark NLP version: 6.0.5\n",
-            "*****************************************************************************\n",
-            "spellcheck_norvig download started this may take some time.\n",
-            "Approximate size to download 4.2 MB\n",
+            "check_spelling download started this may take some time.\n",
+            "Approx size to download 884.9 KB\n",
             "[OK!]\n",
-            "+----------------------------------------------------------------+\n",
-            "|result                                                          |\n",
-            "+----------------------------------------------------------------+\n",
-            "|[Yesterday, ,, I, went, to, the, library, and, saw, elefants, .]|\n",
-            "+----------------------------------------------------------------+\n",
-            "\n"
+            "*****************************************************************************\n",
+            "Original Text:\n",
+            " Yesturday, I went to the libary to borow a book about anciant civilizations. The wether was pleasent, so I decidid to walk insted of taking the buss. On the way, I saw a restuarent that lookt intresting, and I plan to viset it soon.\n",
+            "Corrected Text:\n",
+            " Yesterday, I went to the library to borrow a book about ancient civilizations. The whether was pleasant, so I decided to walk instead of taking the bus. On the way, I saw a restuarent that looks interesting, and I plan to visit it soon.\n",
+            "*****************************************************************************\n"
           ]
         }
       ]
